--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <title>Menu</title>
 </head>
 <body class='body'>
+  <iframe class='pdf' src="./images/menu.pdf#toolbar=0&navpanes=0" frameborder="0"></iframe>
+
   <div class="animation">
     <img src="./images/palec.svg" alt="palec" class="palec">
-    <span class="line "></span>
+    <span class="line"></span>
     <div class="ellipse"></div>
   </div>
+
   <div class="middle">
     <div class="slider-container">
       <span class="bar">
