--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Menu</title>
 </head>
 <body class='body'>
-  <iframe class='pdf' src="./images/menu.pdf#toolbar=0&navpanes=0" frameborder="0"></iframe>
+  <!-- <iframe class='pdf' src="./images/menu.pdf#toolbar=0&navpanes=0" frameborder="0"></iframe> -->
+  <img class='pages' src="./images/firstpage.jpg" alt="page">
+  <img class='pages' src="./images/secondpage.jpg" alt="page">
 
   <div class="animation">
     <img src="./images/palec.svg" alt="palec" class="palec">
