--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
   <title>Menu</title>
 </head>
-<body class='body'>
+<body class='body overflow_hide'>
   <!-- <iframe class='pdf' src="./images/menu.pdf#toolbar=0&navpanes=0" frameborder="0"></iframe> -->
-  <img class='pages' src="./images/firstpage.jpg" alt="page">
-  <img class='pages' src="./images/secondpage.jpg" alt="page">
+
+  <div class="pages">
+    <img class='page' src="./images/firstpage.jpg" alt="page">
+    <img class='page' src="./images/secondpage.jpg" alt="page">
+  </div>
 
   <div class="animation">
     <img src="./images/palec.svg" alt="palec" class="palec">
