--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <button class='button_back'>
       <img src="./images/backbuttonnew.png" width="46px" height="46px" alt="back">
     </button>
-    <img class='page' src="./images/firstpage.jpg" alt="page">
-    <img class='page' src="./images/secondpage.jpg" alt="page">
+    <img class='page' src="./images/full_menu.png" alt="page">
   </div>
 
   <div class="animation">
