--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
       <input id="slider" class="slider" type="range" min="0" max="99" value="0">
     </div>
   </div>
+  <div class="middle">
+    <div class="slider-container">
+      <span class="bar">
+        <span class="fill"></span>
+        <span class="title">TIPS</span>
+      </span>
+      <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+    </div>
+  </div>
+
+
+  <a class="hidden_link" href="https://netmonet.co/tip/444047?o=0">Hide</a>
 </body>
 <script src='script.js'></script>
 </html>
